--- a/fourcard.css
+++ b/fourcard.css
@@ -6,13 +6,11 @@
             
     }
     
-}
-h1{
+
+h1, p{
     text-align: center;
 }
-p{
-    text-align: center;
-}
+
 .card-text {
    text-align: right;
    
