--- a/fourcard.css
+++ b/fourcard.css
@@ -25,8 +25,13 @@ p, .fw-light {
 
 .cardbox{
     max-width: 768px;
-    /* justify-content: center; */
-   justify-self: center;
+    margin: auto;
+    
+    
+  /* justify-content: center; */
+   /* justify-self: center;  */
+   
+   
 }
 
 #card1{
